--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <<!DOCTYPE html>
 <html>
 	<head>
-		<title> Corduroy's Techlife</title>
+		<title>Corduroy's Techlife</title>
 	</head>
 	<body>
-	
+		<img src="TillTheNextLifeSky.jpg" alt="Tech Life Logo">
+		<h1>Corduroy's Tech Life</h1>
+		<p>From guy with a dream, to Web Developer in 12 weeks.</p>
 	</body>
 	</html>
