--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
 	<head>
 		<title>Corduroy's Techlife</title>
+		<link rel="stylesheet" href="stylesheet.css">
 	</head>
 	<body>
-		<img src="TillTheNextLifeSky.jpg" alt="Tech Life Logo">
+		<img src="TillTheNextLifeSky.png" alt="Tech Life Logo">
 		<h1>Corduroy's Tech Life</h1>
 		<p>From guy with a dream, to Web Developer in 12 weeks.</p>
-		
+
 	</body>
 	</html>
