a very broken coming soon page

--- a/index.html
+++ b/index.html
@@ -3,11 +3,18 @@
 	<head>
 		<title>Corduroy's Techlife</title>
 		<link rel="stylesheet" href="stylesheet.css">
+		<link href='https://fonts.googleapis.com/css?family=Great+Vibes' rel='stylesheet' type='text/css'>
 	</head>
-	<body>
-		<img src="TillTheNextLifeSky.png" alt="Tech Life Logo">
-		<h1>Corduroy's Tech Life</h1>
-		<p>From guy with a dream, to Web Developer in 12 weeks.</p>
 
+	<body>
+		<section class="hero">
+			<header>
+				<div class ="techlife">
+				<img src="Blvckyuppie.png" alt="Tech Life Logo">
+			</div>
+				<h2>From guy with a dream, to Web Developer in 12 weeks.</h2>
+					<h1> Coming Soon... </h1>
+			</header>
+		</section>
 	</body>
-	</html>
+</html>
