initial commit, deleted some html, background image, moved to div

--- a/index.html
+++ b/index.html
@@ -7,14 +7,11 @@
 	</head>
 
 	<body>
-		<section class="hero">
-			<header>
-				<div class ="techlife">
-				<img src="Blvckyuppie.png" alt="Tech Life Logo">
+			<div class ="techlife">
+				<img id="img1" src="Blvckyuppie.png" alt="Tech Life Logo">
+				<img id="img2" src="TillTheNextLifeSky.png" alt="" />
 			</div>
 				<h2>From guy with a dream, to Web Developer in 12 weeks.</h2>
 					<h1> Coming Soon... </h1>
-			</header>
-		</section>
 	</body>
 </html>
