semi functional, changed background, trans works

--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
 	</head>
 
 	<body>
-		<section class="hero">
+		<section class="Tech">
 			<header>
-				<div class ="techlife">
-				<img src="Blvckyuppie.png" alt="Tech Life Logo">
+				<div id= "techlife">
+  <img class="bottom" src="TillTheNextLifeSky.png" />
+  <img class="top" src="blvckyuppie.png"/>
 			</div>
-				<h1>From guy with a dream, to Web Developer in 12 weeks.</h1>
-					<h2> Coming Soon... </h2>
+			<div id="text">
+				 <h1>From guy with a dream, to Web Developer in 12 weeks.</h1>
+					<h2> Coming Soon... </h2> 
+			</div>
 			</header>
 		</section>
 	</body>
