--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 	<body>
 		<section class="Tech">
 			<header>
-				<div id= "techlife">
-  <img class="bottom" src="TillTheNextLifeSky.png" />
-  <img class="top" src="blvckyuppie.png"/>
+				<div class= "techlife">
+  <img id="bottom" src="TillTheNextLifeSky.png" />
+  <img id="top" src="blvckyuppie.png"/>
 			</div>
-			<div id="text">
+			<div class="text">
 				 <h1>From guy with a dream, to Web Developer in 12 weeks.</h1>
-					<h2> Coming Soon... </h2> 
+					<h2> Coming Soon... </h2>
 			</div>
 			</header>
 		</section>
